fixed spacing for crudpasswords

--- a/css/crudpasswords.css
+++ b/css/crudpasswords.css
@@ -346,17 +346,17 @@
 
 /***** CRUD PASSWORDS CSS ******/
 .tablehead{
-    padding-right: 130px;
+    padding-right: 150px;
     font-size:30px;
 }
 
 .tabledata{
-    padding-right: 120px;
+    padding-right: 150px;
     font-size: 20px;
 }
 
 .listpasswords{
-    margin-left: 40px;
+    margin-left: 10px;
 }
 
 .inputDivCreate{
@@ -367,7 +367,7 @@
     padding-right: 100px;
     text-align: right;
     width: 100px;
-    float: center;
+    float: right;
 }
 
 .inputDivCreate input[type=submit] {
